samples/_failures_safe/1761408500_8d9c20_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29e9d2ef.c: In function ‘main’:
./samples/SAFE/__tmp_29e9d2ef.c:156:21: error: expected declaration or statement at end of input
  156 |                     print_matrix(&result, "Result");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_29e9d2ef.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29e9d2ef.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29e9d2ef.c:156:21: error: expected declaration or statement at end of input
